--- a/package.json
+++ b/package.json
@@ -1,22 +1,38 @@
 {
-  "name": "react_project_sw",
-  "version": "1.0.0",
-  "description": "My first react project",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/anasitchinava/react_project_SW.git"
-  },
-  "author": "Anna Stch",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/anasitchinava/react_project_SW/issues"
-  },
-  "homepage": "https://github.com/anasitchinava/react_project_SW#readme",
+  "name": "react_project",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "validator": "^13.11.0"
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
